--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.dating.app.idateu.ThirdSignUpPage">
+        <activity android:name="com.dating.app.idateu.WelcomeView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
