--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.dating.app.idateu.SignUpLogIn">
+        <activity android:name=".AppLauncher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,11 +34,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-    <activity android:name=".SecondSignUpPage"/>
-    <activity android:name="com.dating.app.idateu.ThirdSignUpPage"/>
 
+        <activity android:name=".SecondSignUpPage" />
+        <activity android:name=".ThirdSignUpPage" />
+        <activity android:name=".SignUpLogIn" />
+        <activity android:name=".HomePage"></activity>
     </application>
-
-
 
 </manifest>
