--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AppLauncher">
+        <activity android:name=".SignUp_LogIn.SignUpLogIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,10 +35,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".SecondSignUpPage" />
-        <activity android:name=".ThirdSignUpPage" />
-        <activity android:name=".SignUpLogIn" />
-        <activity android:name=".HomePage"></activity>
+        <activity android:name=".SignUp_LogIn.SecondSignUpPage" />
+        <activity android:name=".SignUp_LogIn.ThirdSignUpPage" />
+        <activity android:name=".Homepage.HomePage"></activity>
     </application>
 
 </manifest>
