transitional animation in every activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
 
         <activity android:name=".SignUp_LogIn.SecondSignUpPage" />
         <activity android:name=".SignUp_LogIn.ThirdSignUpPage" />
-        <activity android:name=".Homepage.HomePage"></activity>
+        <activity android:name=".Homepage.HomePage"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
