basic pop-up has been made (no image)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
         <activity android:name=".Homepage.HomePage"
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
+
+        <activity android:name=".Homepage.Pop_up"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.TransparentPopUp"/>
     </application>
 
 </manifest>
