--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.squareup:otto:1.3.8'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.github.castorflex.verticalviewpager:library:19.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
