--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".Homepage.PopUp_launcher"
+        <activity android:name=".Homepage.Pop_up.PopUp_launcher"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.TransparentPopUp"/>
